[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rarg-ray-patterns"
version = "0.0.2"
description = "Common Ray distributed computing patterns for RARG codebases"
readme = "README.md"
requires-python = ">=3.11"
license = "BSD-3-Clause"
authors = [{ name = "Simon Perkins", email = "simon.perkins@gmail.com" }]
dependencies = [
    "ray>=2.55.1",
]

[project.urls]
Homepage = "https://github.com/ratt-ru/rarg-ray-patterns"
Repository = "https://github.com/ratt-ru/rarg-ray-patterns"

[dependency-groups]
# ray[default] pulls in the dashboard / state-API server that the tests use to
# query scheduled actors via ray.util.state.
test = ["pytest", "ray[default]"]
dev = ["pre-commit", "mypy", "ruff", "tbump"]

[tool.hatch.build.targets.wheel]
packages = ["src/rarg_ray_patterns"]

[tool.ruff]
line-length = 88
indent-width = 2

[tool.ruff.lint]
extend-select = ["I"]  # import sorting

[tool.mypy]
python_version = "3.13"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.tbump.version]
current = "0.0.2"
# https://semver.org/#spec-item-9
regex = '''(?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)-?(?P<ptype>(alpha|beta|rc)\.(?P<prerelease>\d+))?'''

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "{new_version}"

[[tool.tbump.file]]
src = "pyproject.toml"
search = 'version = "{current_version}"'

[[tool.tbump.file]]
src = "src/rarg_ray_patterns/__init__.py"
search = '__version__ = "{current_version}"'
